--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Day 2 Demo</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
