--- a/index.html
+++ b/index.html
@@ -8,13 +8,41 @@
   <body>
     <header>
       <h1>Annie Pineda</h1>
-      <p>Hello! I'm Annie and I'm a SDE Apprentice at Amazon. My background is in education, for over 3 years I have tought K-12 students in a vast breath of subjects. <br /> A few fun personal facts are... I grew up in California and have lived in Washington for the past 5 years. In my free time I love painting and always enjoy a good book.<br /> </p>
+
+      <ul1> 
+          <li>I'm a SDE Apprentice at Amazon</li>
+          <li>I have tought K-12 students in a vast breath of subjects.</li>
+          <li>I grew up in California </li>
+          <li>I lived in Washington for the past 5 years.  </li>
+          <li>In my free time I love painting and always enjoy a good book</li>
+      </ul1>
+      
     </header>
 
     <main>
-      <h2>Cool pics:</h2>
+       <h2>Cool pics:</h2>
       <img src="http://placehold.it/300x300">
       <img src="http://placehold.it/300x300">
+
+      <h3>Top Ten Places I Would Like to Visit</h3>
+
+      <article>
+      <ol>
+            <li>France</li>
+            <li>Spain</li>
+            <li>Great Britain</li>
+            <li>Ireland</li>
+            <li>Egypt</li>
+            <li>South Africa</li>
+            <li>Australia</li>
+            <li>Japan</li>
+            <li>Greece</li>
+            <li>Galapagos</li>
+
+        </ol>
+        </article>
+
+
     </main>
     
     <footer></footer>
